# PullRequestViewer

./: .gitignore  MANIFEST.in  README.md  example_config.yaml  pull_request_viewer.py  pyproject.toml  requirements.txt  rh-pr-grather.sh
src/rh_pr_gather/: config.py  main.py  report.py
